--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-    <header>Bienvenue sur mon site informatique</header>
+    <header>Bienvenue sur mon site </header>
     
             
 
@@ -46,7 +46,7 @@
             <div class="container">
         <div class="card">
             <h2>À propos</h2>
-           <h4> <a href="page 1.html">Ce site présente des informations sur l'informatique .</a></h4>
+           <h4> <a href="page 1.html">Ce site présente des informations sur ma vie .</a></h4>
         </div>
         <div class="card">
             <h2>Projets</h2>
