--- a/page 1.html
+++ b/page 1.html
@@ -48,7 +48,9 @@
             <h2>À propos</h2>
            <h4> <a href="page1.html">Ce site présente des informations sur moi .</a></h4>
         </div>
-        <h2> je suis</h2>
+        <h2> je suis un demandeur d'emploi en invalidité CAT 2
+        en situation trés précaire a cause de cet état qui ne fais strictement rien malgrés mes differentes alertes en messageries et sur sites et mes suivi par CAP EMPLOI et POLE EMPLOI qui se font des passe passe en dossier sans aucune réaction .Le seul but de ces organisations est que je parte en rétraite alors que je l'avais demander en 2021 avec un refus en réponse "vous pouvez travailler"
+alors que je n'arrivais plus         </h2>
         <div class="card">
             <h2>Projets</h2>
           <h4> <a href="index.html">Retour sur la page</a></h4>
