--- a/page 10.html
+++ b/page 10.html
@@ -48,7 +48,7 @@
             <h2>Projets </h2> 
             <h2>Dossier retraite</h2>
             <h4> <a href="page 11.html">Mes démarches 9</a></h4>
-             <h2>preuve que POLE EMPLOI et CAP EMPLOI font express de faire trainer les choses afin de me sortir de ma situation précaire et pour me trouver un CUI atemps partiel car uls veulent que je prend ma retraite .Mais je ne souhaite pas cette retraite car je perd 200 euros et je ne suis pas habitué a rester a rien faire</h2>
+             <h2>La preuve que POLE EMPLOI et CAP EMPLOI font express de faire trainer les choses afin de ne pas me sortir de ma situation précaire et aussi pour ne pas  me trouver un CUI a temps partiel car ils veulent que je prend ma retraite .Mais je ne souhaite pas cette retraite car je perd 200 euros et je ne suis pas habitué a rester a rien faire</h2>
              <img src="12.jpg">
            
           
