--- a/page 3.html
+++ b/page 3.html
@@ -46,7 +46,8 @@
             <div class="container">
         <div class="card">
             <h2>Projets</h2> 
-            <h2>courrier Premier Ministre</h2>
+             <h2>courrier Premier Ministre</h2> </bv>
+            <h2>premier-ministre@premier-ministre.gouv.fr</h2>
             <h4> <a href="page 4.html">Mes démarches 2</a></h4>
             <img src="1.jpg">
             <img src="2.jpg">
