--- a/page 6.html
+++ b/page 6.html
@@ -47,7 +47,7 @@
         <div class="card">
             <h2>Projets </h2> 
          
-            <h2>courrier Président Départemental</h2></br>
+            <h2>courrier Président Départemental</h2>
             <h2>presidence.secretariat@pasdecalais.fr</h2>
             <h4> <a href="page 7.html">Mes démarches 5</a></h4>
             <img src="8.jpg">
