--- a/page 7.html
+++ b/page 7.html
@@ -46,7 +46,7 @@
             <div class="container">
         <div class="card">
             <h2>Projets </h2> 
-            <h2>courrier Préfet</h2></brv>
+            <h2>courrier Préfet</h2></br>
             <h2>prefecture@pas-de-calais.gouv.fr</h2>
             <h4> <a href="page 8.html">Mes démarches 6</a></h4>
             <img src="10.jpg">
