--- a/page 14.html
+++ b/page 14.html
@@ -46,7 +46,7 @@
             <div class="container">
         <div class="card">
             <h2>Projets </h2> 
-            <h2>Je voycotte l'heure d'été</h2>
+            <h2>Je boycotte l'heure d'été</h2>
           <h4> <a href="page 15.html">Mes démarches 13</a></h4>
           <h2>Les motifs que je boycotte l'heure d'été
 </br>
